[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Cowboy.png" type="Texture" id=1]
[ext_resource path="res://Resources/Graphics/CowboyDead.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Cowboy.gd" type="Script" id=4]
[ext_resource path="res://Resources/Sounds/gunshot.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Sounds/gunCocking.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Gun.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 25.5052

[node name="Cowboy" instance=ExtResource( 3 )]
script = ExtResource( 4 )
itemScene = ExtResource( 7 )

[node name="DeadSprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="AliveSprite" parent="." index="1"]
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 1 )

[node name="GunTimer" type="Timer" parent="." index="5"]
wait_time = 3.0
autostart = true

[node name="GunCockingTimer" type="Timer" parent="." index="6"]
wait_time = 2.2
one_shot = true
autostart = true

[node name="GunShotPlayer" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 5 )
max_distance = 4500.0

[node name="GunCockingPlayer" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 6 )
max_distance = 4500.0
__meta__ = {
"_editor_description_": ""
}
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="GunCockingTimer" to="." method="_on_GunCockingTimer_timeout"]
